Fix wrong height of upload button

--- a/src/pages/challenges/proof/upload/UploadProofModal.scss
+++ b/src/pages/challenges/proof/upload/UploadProofModal.scss
@@ -3,12 +3,13 @@
   background: inherit;
   .chooseFileButton {
     border-radius: 1.5rem;
-    background: #55bbda;
+    height: 3rem !important;
+    background: #7dd7e1;
     color: #ffffff;
     font: inherit;
     height: inherit;
-    padding-top: 0.9rem;
-    padding-bottom: 0.9rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 }
 
